--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <li>Advocacy and Activism<i class="js-remove">✖</i> </li>
     <li>Innovative Technology<i class="js-remove">✖</i></li>
   </ul>
-  <button id='add' onclick="myFunction()">Add</button>
+  <button id='add' onclick="myFunction()">Add Theme</button>
+  <button id='bucket' onclick="bucket()">Add Bucket</button>
 </nav>
 
 <div class="w3-main" style="margin-left:320px;">
@@ -61,6 +62,10 @@
 </div>
 
 </div>
+
+<div class="w3-row-padding" id="secondrow">  
+</div> 
+
 </div>
 
 
@@ -87,6 +92,16 @@ function myFunction(){
       editableList.el.appendChild(el);
     });
   }; 
+
+
+
+function bucket() {
+    var div = document.createElement('div');
+    div.setAttribute('class', "3-container w3-quarter");
+    div.innerHTML="<h2>Extra Bucket</h2><ul class='highlight w3-ul w3-border' id='qux4'><li></li></ul>";
+    document.getElementById("secondrow").appendChild(div);
+};
+
 
 
 Sortable.create(qux, {
