--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
    <head>
       <meta charset="utf-8">
       <title>Voting App</title>
+      <script src="https://d3js.org/d3.v4.min.js"></script>
       <script src="//rubaxa.github.io/Sortable/Sortable.js"></script>
       <script src="//rubaxa.github.io/Ply/Ply.min.js"></script>
-      <script src="https://www.w3schools.com/lib/w3.js"></script>
+      <script src="https://www.w3schools.com/lib/w3.js"></script>      
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
    </head>
@@ -19,8 +20,6 @@
             <li>Research & External Funding<i class="js-remove">✖</i> </li>
             <li>Accessability<i class="js-remove">✖</i></li>
             <li>Academic Excellence<i class="js-remove">✖</i></li>
-            <li>Advocacy and Activism<i class="js-remove">✖</i> </li>
-            <li>Innovative Technology<i class="js-remove">✖</i></li>
          </ul>
          <button id='add' onclick="myFunction()">Add Theme</button>
          <button id='bucket' onclick="bucket()">Add Bucket</button>
