--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <title>Voting App</title>
       <script src="https://d3js.org/d3.v4.min.js"></script>
-      <script src="//rubaxa.github.io/Sortable/Sortable.js"></script>
-      <script src="//rubaxa.github.io/Ply/Ply.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+      <script src="http://rubaxa.github.io/Ply/Ply.min.js"></script>
       <script src="https://www.w3schools.com/lib/w3.js"></script>      
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
